Optimised the previous fix: only webkit browsers are "transform-sensitive"  within the :fullscreen pseudo-class, so removed all the unnecessary stuff. Also cleaned unwanted compass traces in absalign.css.

--- a/src/absalign.scss
+++ b/src/absalign.scss
@@ -29,10 +29,19 @@
 
 #{$transformed-classes}
 {
-	&:fullscreen
-	{
-		transform: none;
-	}
+    &:-webkit-full-screen
+    {
+        /* autoprefixer: off */
+        -webkit-transform: none;
+                transform: none;
+    }
+
+    &:fullscreen
+    {
+        /* autoprefixer: off */
+        -webkit-transform: none;
+                transform: none;
+    }
 }
 
 
